# OdangoOCDS

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci_checks.yml
boards/rpi_pico/: Cargo.toml
boards/rpi_pico/.cargo/: config.toml
boards/rpi_pico/src/: main.rs
boards/rpi_pico/testsuite/: Cargo.toml
boards/rpi_pico/testsuite/src/: lib.rs
boards/rpi_pico/testsuite/tests/: test.rs
odango-ocds/: Cargo.toml
